<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:elevation="0dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:id="@+id/recording_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDCBA6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/recording_player_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01:01"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/recording_player_seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:progress="60"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/white"
                android:thumbTint="@color/white" />

            <TextView
                android:id="@+id/recording_player_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01:01"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="6"
            android:id="@+id/recording_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_weight="1"
                android:id="@+id/recording_player_play"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play"
                app:tint="@color/white" />

            <ImageButton
                android:layout_weight="1"
                android:id="@+id/recording_player_edit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_button"
                app:layout_constraintEnd_toStartOf="@id/recording_player_trim"
                app:layout_constraintStart_toEndOf="@id/recording_player_play"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit"
                app:tint="@color/white" />

            <ImageButton
                android:layout_weight="1"
                android:id="@+id/recording_player_trim"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_crop"
                app:tint="@color/white" />

            <ImageButton
                android:layout_weight="1"
                android:id="@+id/recording_player_share"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/share_button"
                app:layout_constraintEnd_toStartOf="@id/recording_player_trash"
                app:layout_constraintStart_toEndOf="@id/recording_player_trim"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share"
                app:tint="@color/white" />

            <ImageButton
                android:layout_weight="1"
                android:id="@+id/recording_player_trash"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/trash_button"
                app:layout_constraintEnd_toStartOf="@id/recording_player_share"
                app:layout_constraintStart_toEndOf="@id/recording_player_down"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_trash"
                app:tint="@color/white" />
            <ImageButton
                android:layout_weight="1"
                android:id="@+id/recording_player_down"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/trash_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_down"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
